--- a/Design_NetworkMonitor/src/MainForm.form
+++ b/Design_NetworkMonitor/src/MainForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainForm">
-  <grid id="27dc6" binding="panelBase" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panelBase" layout-manager="GridLayoutManager" row-count="4" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
       <xy x="20" y="20" width="599" height="235"/>
@@ -26,7 +26,7 @@
       </component>
       <component id="5206d" class="javax.swing.JComboBox" binding="comboBoxNICs">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="250" height="-1"/>
             <preferred-size width="250" height="-1"/>
           </grid>
@@ -41,7 +41,7 @@
       </component>
       <component id="cc1f4" class="javax.swing.JButton" binding="buttonAction">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Start tracking"/>
@@ -65,7 +65,7 @@
       </component>
       <component id="f105c" class="javax.swing.JLabel" binding="labelTCPStatus">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="250" height="-1"/>
             <preferred-size width="250" height="-1"/>
           </grid>
@@ -76,7 +76,7 @@
       </component>
       <component id="ee801" class="javax.swing.JLabel" binding="labelUDPStatus">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="250" height="-1"/>
             <preferred-size width="250" height="-1"/>
           </grid>
@@ -87,7 +87,7 @@
       </component>
       <scrollpane id="d6bdf" binding="scrollPanelLogs">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="5" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="-1" height="50"/>
           </grid>
         </constraints>
@@ -103,6 +103,24 @@
           </component>
         </children>
       </scrollpane>
+      <component id="e6c33" class="javax.swing.JCheckBox" binding="checkBoxTCP">
+        <constraints>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <selected value="true"/>
+          <text value="TrackTCP"/>
+        </properties>
+      </component>
+      <component id="9b5c5" class="javax.swing.JCheckBox" binding="checkBoxUDP">
+        <constraints>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <selected value="true"/>
+          <text value="Track UDP"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
