--- a/Design_NetworkMonitor/src/MainForm.form
+++ b/Design_NetworkMonitor/src/MainForm.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainForm">
-  <grid id="27dc6" binding="panelBase" layout-manager="GridLayoutManager" row-count="4" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panelBase" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="599" height="235"/>
+      <xy x="20" y="20" width="636" height="235"/>
     </constraints>
     <properties>
       <autoscrolls value="true"/>
@@ -57,15 +57,15 @@
       </component>
       <component id="80098" class="javax.swing.JLabel" binding="labelGuide3">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Current status:"/>
+          <text value="Traffic status:"/>
         </properties>
       </component>
       <component id="f105c" class="javax.swing.JLabel" binding="labelTCPStatus">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="250" height="-1"/>
             <preferred-size width="250" height="-1"/>
           </grid>
@@ -76,7 +76,7 @@
       </component>
       <component id="ee801" class="javax.swing.JLabel" binding="labelUDPStatus">
         <constraints>
-          <grid row="3" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="250" height="-1"/>
             <preferred-size width="250" height="-1"/>
           </grid>
@@ -88,7 +88,7 @@
       <scrollpane id="d6bdf" binding="scrollPanelLogs">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="5" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="50"/>
+            <preferred-size width="-1" height="35"/>
           </grid>
         </constraints>
         <properties/>
@@ -98,7 +98,7 @@
             <constraints/>
             <properties>
               <editable value="false"/>
-              <minimumSize width="0" height="50"/>
+              <minimumSize width="0" height="15"/>
             </properties>
           </component>
         </children>
@@ -109,7 +109,7 @@
         </constraints>
         <properties>
           <selected value="true"/>
-          <text value="TrackTCP"/>
+          <text value="Track TCP"/>
         </properties>
       </component>
       <component id="9b5c5" class="javax.swing.JCheckBox" binding="checkBoxUDP">
@@ -119,6 +119,25 @@
         <properties>
           <selected value="true"/>
           <text value="Track UDP"/>
+        </properties>
+      </component>
+      <grid id="f4187" binding="panelChart" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="250" height="50"/>
+            <preferred-size width="250" height="150"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
+      <component id="ce358" class="javax.swing.JLabel" binding="labelGuide4">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Real time traffic:"/>
         </properties>
       </component>
     </children>
