--- a/Design_NetworkMonitor/src/MainForm.form
+++ b/Design_NetworkMonitor/src/MainForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panelBase" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="636" height="235"/>
+      <xy x="20" y="20" width="725" height="235"/>
     </constraints>
     <properties>
       <autoscrolls value="true"/>
@@ -18,7 +18,11 @@
     <children>
       <component id="ba5c9" class="javax.swing.JLabel" binding="labelGuide1">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="100" height="-1"/>
+            <preferred-size width="100" height="-1"/>
+            <maximum-size width="100" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Choose your NIC:"/>
@@ -41,7 +45,10 @@
       </component>
       <component id="cc1f4" class="javax.swing.JButton" binding="buttonAction">
         <constraints>
-          <grid row="0" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="250" height="-1"/>
+            <preferred-size width="250" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Start tracking"/>
@@ -49,7 +56,11 @@
       </component>
       <component id="b28c9" class="javax.swing.JLabel" binding="labelGuide2">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="100" height="-1"/>
+            <preferred-size width="100" height="-1"/>
+            <maximum-size width="100" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Activity logs:"/>
@@ -57,7 +68,11 @@
       </component>
       <component id="80098" class="javax.swing.JLabel" binding="labelGuide3">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="100" height="-1"/>
+            <preferred-size width="100" height="-1"/>
+            <maximum-size width="100" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Traffic status:"/>
@@ -66,8 +81,9 @@
       <component id="f105c" class="javax.swing.JLabel" binding="labelTCPStatus">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="250" height="-1"/>
-            <preferred-size width="250" height="-1"/>
+            <minimum-size width="235" height="-1"/>
+            <preferred-size width="235" height="-1"/>
+            <maximum-size width="235" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -77,8 +93,9 @@
       <component id="ee801" class="javax.swing.JLabel" binding="labelUDPStatus">
         <constraints>
           <grid row="5" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="250" height="-1"/>
-            <preferred-size width="250" height="-1"/>
+            <minimum-size width="235" height="-1"/>
+            <preferred-size width="235" height="-1"/>
+            <maximum-size width="235" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -105,7 +122,11 @@
       </scrollpane>
       <component id="e6c33" class="javax.swing.JCheckBox" binding="checkBoxTCP">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="105" height="-1"/>
+            <preferred-size width="105" height="-1"/>
+            <maximum-size width="105" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <selected value="true"/>
@@ -114,7 +135,11 @@
       </component>
       <component id="9b5c5" class="javax.swing.JCheckBox" binding="checkBoxUDP">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="105" height="-1"/>
+            <preferred-size width="105" height="-1"/>
+            <maximum-size width="105" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <selected value="true"/>
@@ -124,8 +149,8 @@
       <grid id="f4187" binding="panelChart" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="250" height="50"/>
-            <preferred-size width="250" height="150"/>
+            <minimum-size width="500" height="50"/>
+            <preferred-size width="-1" height="150"/>
           </grid>
         </constraints>
         <properties/>
@@ -134,7 +159,11 @@
       </grid>
       <component id="ce358" class="javax.swing.JLabel" binding="labelGuide4">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="100" height="-1"/>
+            <preferred-size width="100" height="-1"/>
+            <maximum-size width="100" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Real time traffic:"/>
